IVYPORTAL-9262: Portal supports Firefox and Edge - Fixed bug: Chart detail dialog is too small on Firefox

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3116,6 +3116,7 @@ _:-ms-fullscreen, :root .new-absence-messages .ui-messages-error {
 
 .chart-info-container, .chart-info-container.ui-panelgrid tbody tr td {
   vertical-align: top;
+  word-break: break-all;
 }
 
 .chart-info-container .label-column {
